# EduVision-AI-Learning-Assistant

./: .env.example  README.md  pyproject.toml  sitecustomize.py
app/: Home.py
app/pages/: 1_Question_Answering.py  2_Text_Summarization.py  3_Quiz_Generator.py  4_OCR.py  5_Image_Classification.py  6_Evaluation.py  7_Settings.py
src/eduvision_ai/config/: settings.py
src/eduvision_ai/llm/: gemini_provider.py  huggingface_provider.py  provider.py
src/eduvision_ai/models/: llm_response.py  quiz_question.py
src/eduvision_ai/prompts/: image_classification.py  ocr.py  quiz.py  summarization.py
src/eduvision_ai/services/: base_llm_service.py  image_classification_service.py  llm_service.py  ocr_service.py  qa_service.py  quiz_service.py  summarization_service.py
src/eduvision_ai/utils/: quiz_utils.py
src/eduvision_ai_learning_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_gemini.py  test_google_sdk.py  test_llm.py  test_ocr_service.py  test_quiz_service.py  test_settings.py
